alignment fix

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -198,7 +198,7 @@ body {
 
 @media (min-width: 1081px) {
   .everything {
-    padding-left: 32px;
+    padding-left: 20px;
   }
 
   .find {
